[gd_scene load_steps=14 format=3 uid="uid://blvg7sk4onp3u"]

[ext_resource type="PackedScene" uid="uid://b1tmdv5engi7u" path="res://Assets/models/character_skeleton_mage.gltf" id="1_81v58"]
[ext_resource type="Script" path="res://Player3D/mage.gd" id="2_7v6x4"]
[ext_resource type="Material" uid="uid://dn31p8smrsl71" path="res://Assets/materials/red_team.tres" id="3_b1lpo"]
[ext_resource type="Material" uid="uid://d2xxom0uw73cl" path="res://Assets/materials/blue_team.tres" id="3_h8idm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ggvdy"]
material = ExtResource("3_h8idm")
radius = 0.22
height = 0.8

[sub_resource type="TorusMesh" id="TorusMesh_nkcxm"]
material = ExtResource("3_h8idm")
inner_radius = 0.1
outer_radius = 0.2
rings = 32
ring_segments = 16

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dfugw"]
material = ExtResource("3_b1lpo")
radius = 0.22
height = 0.8

[sub_resource type="TorusMesh" id="TorusMesh_hyfkf"]
material = ExtResource("3_b1lpo")
inner_radius = 0.1
outer_radius = 0.2
rings = 32
ring_segments = 16

[sub_resource type="Animation" id="Animation_ywxvb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character_skeleton_mage_body/character_skeleton_mage_head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.704536, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character_skeleton_mage_body/character_skeleton_mage_head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("character_skeleton_mage_body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("character_skeleton_mage_body:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("character_skeleton_mage_body/character_skeleton_mage_head:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("character_skeleton_mage_body:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tjyjt"]
resource_name = "death"
length = 11.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character_skeleton_mage_body:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0987167, 0.202341, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0825795, -0.145089, 0), Vector3(0, 0, 0), Vector3(1.30825, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character_skeleton_mage_body/character_skeleton_mage_head:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0987167, 0.20078, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.00480029, 0.497928, 0.0332387), Vector3(0, 0, 0), Vector3(-0.232379, 1.57737, 0.230869), Vector3(-0.396263, 2.25863, 0.1686)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("character_skeleton_mage_body/character_skeleton_mage_head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0987167, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.704536, 0), Vector3(0.00474938, 0.701856, 0.0323934), Vector3(0, 0.704536, 0), Vector3(0, 1.32295, 0.166201)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.8037, 2.91264),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, -0.638873, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("character_skeleton_mage_body/character_skeleton_mage_head:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("character_skeleton_mage_body/MESH_BLUE:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("character_skeleton_mage_body/MESH_RED:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("character_skeleton_mage_body:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 4.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_a4rcx"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character_skeleton_mage_body/character_skeleton_mage_head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.184708, 0, 0), Vector3(0.00611448, 0, 0), Vector3(-0.110424, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("character_skeleton_mage_body/character_skeleton_mage_head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.704536, 0), Vector3(0, 0.704536, 0.0394012), Vector3(0, 0.632709, 0.0262675), Vector3(0, 0.697696, 0.0131337), Vector3(0, 0.704536, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("character_skeleton_mage_body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.0352705, 0), Vector3(0, -0.136876, 0), Vector3(0, -0.0219064, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("character_skeleton_mage_body:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c12fj"]
_data = {
"RESET": SubResource("Animation_ywxvb"),
"death": SubResource("Animation_tjyjt"),
"run": SubResource("Animation_a4rcx")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_i406k"]
properties/0/path = NodePath("AnimationPlayer:current_animation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("character_skeleton_mage_body/MESH_BLUE:visible")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("character_skeleton_mage_body/MESH_RED:visible")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="character_skeleton_mage" instance=ExtResource("1_81v58")]
script = ExtResource("2_7v6x4")

[node name="MESH_BLUE" type="MeshInstance3D" parent="character_skeleton_mage_body" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.403108, 0)
visible = false
mesh = SubResource("CapsuleMesh_ggvdy")
skeleton = NodePath("../MESH_RED")

[node name="MeshInstance3D" type="MeshInstance3D" parent="character_skeleton_mage_body/MESH_BLUE" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.14685, 0)
mesh = SubResource("TorusMesh_nkcxm")

[node name="MESH_RED" type="MeshInstance3D" parent="character_skeleton_mage_body" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.403108, 0)
visible = false
mesh = SubResource("CapsuleMesh_dfugw")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="character_skeleton_mage_body/MESH_RED" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.14685, 0)
mesh = SubResource("TorusMesh_hyfkf")
skeleton = NodePath("../../MESH_BLUE")

[node name="character_skeleton_mage_armLeft" parent="character_skeleton_mage_body" index="2"]
visible = false

[node name="character_skeleton_mage_armRight" parent="character_skeleton_mage_body" index="3"]
visible = false

[node name="character_skeleton_mage_cloak" parent="character_skeleton_mage_body" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.704536, 1.49012e-08)

[node name="character_skeleton_mage_head" parent="character_skeleton_mage_body" index="5"]
transform = Transform3D(0.8, 0, 0, 0, 0.800001, 0, 0, 0, 0.800001, 0, 0.704536, 0)

[node name="character_skeleton_mage_cowl" parent="character_skeleton_mage_body/character_skeleton_mage_head" index="0"]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="character_skeleton_mage_body/character_skeleton_mage_head" index="3"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_c12fj")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." index="2"]
replication_config = SubResource("SceneReplicationConfig_i406k")
